tests/pos/macro.scala
class A {
  def foo: Int = macro ???
  inline def foo: Int = ???
}
