tests/neg/override-scala2-macro/A_1_c2.13.16.scala
import scala.language.experimental.macros

class A {
  def foo: Unit = macro ???
}
